# scopy

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
CI/appveyor/: install_macos_deps.sh
autogenerateFromJSON/: CMakeLists.txt  chnattrreadwrite.cpp  chnattrreadwrite.hpp  cmdreadwrite.cpp  cmdreadwrite.hpp  contextattrreadwrite.cpp  contextattrreadwrite.hpp  customcheckboxwidget.cpp  customcheckboxwidget.hpp  customcheckboxwidget.ui  customcomboboxwidget.cpp  customcomboboxwidget.hpp  customcomboboxwidget.ui  customedittextwidget.cpp  customedittextwidget.hpp  customedittextwidget.ui  customlabelwidget.cpp  customlabelwidget.h  customlabelwidget.ui  customspinboxwidget.cpp  customspinboxwidget.hpp  customspinboxwidget.ui  customwidgetinterface.cpp  customwidgetinterface.hpp  demo.json  demoOneItem.json  devattrreadwrite.cpp  devattrreadwrite.hpp  iiocheckbox.cpp  iiocheckbox.hpp  iiowidget.cpp  iiowidget.hpp  jsonLogic.json  jsonparser.cpp  jsonparser.hpp  mainwindow.cpp  mainwindow.h  readwriteinterface.cpp  readwriteinterface.hpp
ci/general/: AppRun
ci/kuiper/: build_scopy_arm32.sh  scopy-appimage-arm32.sh
ci/macOS/: build_azure_macos.sh  install_macos_deps.sh  package_darwin.sh
ci/ubuntu/: scopy-appimage-ubuntu.sh  ubuntu20_build_process.sh  ubuntu22_build_process.sh
ci/windows/: build_and_create_installer.sh
ci/windows-dev/: DEVENV.md
common/src/: scopyconfig.cpp
core/src/: application_restarter.cpp  detachedtoolwindowmanager.cpp  devicebrowser.cpp  deviceimpl.cpp  devicemanager.cpp  iiotabwidget.cpp  infopagestack.cpp  license_overlay.cpp  pluginenablewidget.cpp  pluginmanager.cpp  scanbuttoncontroller.cpp  scannediiocontextcollector.cpp  scopyhomeinfopage.cpp  scopyhomepage.cpp  scopymainwindow.cpp  toolbrowser.cpp  toolmanager.cpp  toolmenu.cpp  toolmenuitem.cpp  versioncheckmessage.cpp
gr-util/src/: grdeviceaddon.cpp  griiocomplexchannelsrc.cpp  griiodevicesource.cpp  griiofloatchannelsrc.cpp  grproxyblock.cpp  grsignalpath.cpp  grtimechanneladdon.cpp  grtimeplotaddon.cpp  grtimeplotaddonsettings.cpp  grtopblock.cpp  (+3 more)
plugins/: CMakeLists.txt
qtbuild/: scopy_ro.qm
resources/: filter.json  resources.qrc
src/: channel_control.cpp  channel_control.h  device_widget.cpp  device_widget.hpp  dmm.cpp  filter.cpp  filter.hpp  logging_categories.cpp  logging_categories.h  main.cpp  max14906settingstab.cpp  max14906settingstab.h  newinstrument.cpp  newinstrument.hpp  newinstrument_logic.cpp  newinstrument_logic.hpp  tool_launcher.cpp  tool_launcher.hpp  toolmenu.cpp
ui/: channelmonitorcomponent.ui  newinstrument.ui
(+402 files in other folders)
